# bodrevsky

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
src/: main.py
src/core/: config.py
src/endpoints/: deps.py  exceptions.py  youtube.py
src/schemas/: stuff.py  yb_schemas.py
src/services/: yb_service.py
src/templates/: download.html
src/utils/: randomizer.py  url_recognizer.py
